trilinos/Notes.txt
intel 19 seems to be too old for this C++, even trilinos 13.

F: ShyLU temporarily disabled because dealii complains

Cmake seems to have a hard time picking up the compilers, so set CMAKE_C_COMPILER &c explicitly.

trilinos-14.0.0/packages/pamgen/cmake/Dependencies.cmake
edit:
SET(LIB_OPTIONAL_DEP_TPLS SEACASExodusII Nemesis Boost)

================

13.0.0 :
   65 | BigUInt<n>::BigUInt(std::string const& s) : BigUInt(std::uint32_t(0)) {
      |                                                     ~~~~~^
/work/00434/eijkhout/trilinos/trilinos-13.0.0/packages/teuchos/core/src/Teuchos_BigUInt.hpp:79:6: error: no type named 'uint32_t' in namespace 'std'

Solution: add
#include <cstdint>
